--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,10 @@
 *{
-  padding: 0;
-  margin: 0;
+ margin: 0!important;
+  padding: 0!important;
   box-sizing: border-box;
+}
+body{
+  display: block;
+  margin: 0!important;
+  padding: 0!important;
 }
