--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 *{
-  padding: 0;
-  margin: 0;
+  margin: 0!important;
+  padding: 0!important;
   box-sizing: border-box;
+}
+body{
+  margin: 0!important;
+  padding: 0!important;
 }
